# wapp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  lib.rs  main.rs
src/providers/: mod.rs  openweather.rs  weatherapi.rs
tests/: cli_test.rs  config_test.rs  get_data_test.rs  provider_factory_test.rs
tests/mocks/: mock_provider.rs
