[package]
name = "wapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
